test/asm/pc-def.err
ERROR: pc-def.asm(1):
    Label "@" is not a valid argument to DEF
error: Assembly aborted (1 errors)!
