test/asm/pc-def.asm
IF DEF(@)
	PRINTT "defined\n"
ELSE
	PRINTT "not defined\n"
ENDC
